[package]
name = "sub-array"
version = "0.1.1"
authors = ["Cryptjar <cryptjar@junk.studio>"]
license = "Apache-2.0"
edition = "2021"

description = "Extract a sub-array out of an array"
keywords = ["array", "slice", "split"]
categories = ["no-std", "rust-patterns", "data-structures"]
repository = "https://github.com/cryptjar/sub-array"

[package.metadata.docs.rs]
all-features = true

[dependencies]
